--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,16 @@
     <meta name="description" content="{{ page.description }}" />
     {% endif %}
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" media="screen" href="/stylesheets/screen.css" type="text/css" />
+    <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+    <!--[if lt IE 8]>
+        <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+     <![endif]-->
     {% if site.feedburner %}
     <link href="http://feeds.feedburner.com/{{ site.feedburner.id }}" rel="alternate" title="{{ site.title }}" type="application/atom+xml" />
+    {% endif %}
+    {% if site.facebook %}
+    <meta property="fb:admins" content="{{ site.facebook.id }}"/>
     {% endif %}
     {% if site.google_analytics %}
     <!-- google analytics async -->
@@ -25,14 +32,12 @@
     {% endif %}
   </head>
   <body>
-    <div id="page">
-      <div id="header">
+    <div class="container">
+      <div id="header" class="span-24">
         <a href="/"><h1>{{ site.title }}</h1></a>
-      </div>
-      <div id="body">
         {% if page.title %}<h1>{{ page.title }}</h1>{% endif %}
-        {{ content }}
       </div>
+      <div id="content" class="span-20 last"> {{ content }} .</div>
     </div>
 
   {% if site.github %}
