--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,12 @@ layout: default
   </ul>
 </div>
 
+{% if site.facebook %}
+<div id="fbcomments">
+	<div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:comments href="{{ page.url }}" width="950" num_posts="100"></fb:comments> </div>
+{% endif %}
+
+
 {% if site.disqus %}
 <div id="comments">
   <h2>Comments</h2>
@@ -30,5 +36,6 @@ layout: default
   </script>
   <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript={{ site.disqus.id }}">comments powered by Disqus.</a></noscript>
   <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
-{% endif %}
 </div>
+{% endif %}
+
