--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -1,3 +1,16 @@
-@import "mixins/syntax";
+// This import applies a global reset to any page that imports this stylesheet.
+@import "blueprint/reset";
 
-// add your styles, see http://compass-style.org/
+// To configure blueprint, edit the partials/_base.sass file.
+@import "partials/base";
+
+// Import all the default blueprint modules so that we can access their mixins.
+@import "blueprint";
+
+// Import the non-default scaffolding module.
+@import "blueprint/scaffolding";
+
+// Generate the blueprint framework according to your configuration:
+@include blueprint;
+
+@include blueprint-scaffolding;
